# opencv_coordinate

./: CMakeLists.txt  README.md  main.cpp
